# GBAplus

./: .gitignore  CMakeLists.txt  README.md  compare_logs.py
.github/workflows/: release.yml
assets/: app.rc  gba_emu.desktop  icon.icns
cmake/: Info.plist.in
src/: APU.cpp  APU.hpp  ARM7TDMI.cpp  ARM7TDMI.hpp  ARM7TDMI_swi.cpp  Bus.cpp  Bus.hpp  Config.cpp  Config.hpp  DMA.cpp  DMA.hpp  Emulator.cpp  Emulator.hpp  Frontend.cpp  Frontend.hpp  Log.hpp  PPU.cpp  PPU.hpp  SaveState.cpp  SaveState.hpp  Timers.cpp  Timers.hpp  diag_main.cpp  main.cpp  test_main.cpp
tools/: fetch_covers.py
